--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'com.android.support:multidex:1.0.3'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
@@ -61,7 +62,6 @@ dependencies {
 
 
 
-    implementation 'com.android.support:multidex:1.0.3'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
@@ -104,10 +104,9 @@ dependencies {
 
     //Dagger - Hilt
     implementation "com.google.dagger:hilt-android:2.28-alpha"
-    kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02"
     kapt "androidx.hilt:hilt-compiler:1.0.0-alpha02"
-
+    kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
     // Timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
@@ -119,7 +118,9 @@ dependencies {
 //
 //    // Firebase Coroutines
 //    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1'
-//
+
+    //DataStore Preferences
+    implementation "androidx.datastore:datastore-preferences:1.0.0-alpha02"
 
 
     //For Event Management
