--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,6 @@ apply plugin: 'dagger.hilt.android.plugin'
 
 
 
-
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
@@ -23,6 +22,10 @@ android {
         multiDexEnabled true //add this line in the defaultConfig
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField("Boolean", "IS_ENCRYPTION_ENABLED", "true")
+        buildConfigField("String", "DATA_STORE_NAME", "\"my_app_data_store\"")
+
     }
 
     buildTypes {
@@ -34,6 +37,10 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+    // For Kotlin projects
+    kotlinOptions {
+        jvmTarget = "1.8"
     }
 }
 
@@ -84,8 +91,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
 
     // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.0-M1'
+
 
     // Coroutine Lifecycle Scopes
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
@@ -121,7 +128,6 @@ dependencies {
 
     //DataStore Preferences
     implementation "androidx.datastore:datastore-preferences:1.0.0-alpha02"
-
 
     //For Event Management
     api 'com.squareup:otto:1.3.8'
