--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:4.0.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.28.3-alpha"
-//        classpath 'com.google.gms:google-services:4.3.3'
+        //        classpath 'com.google.gms:google-services:4.3.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -25,4 +25,105 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    retrofit2 = "2.7.0"
+    loggingInterceptor = "4.2.2"
+    retrofitGsonConvertor = "2.7.0"
+    gson = "2.8.6"
+    okhttp = "4.2.2"
+    retrofit2AdatperRxJava = "2.7.0"
+    rxJava2 = "2.1.1"
+    junit = "4.12"
+    junitExtension = "1.1.2"
+    espresso = "3.3.0"
+    materialDesign = "1.2.1"
+    lifecyleViewModel = "2.2.0"
+    room = "2.2.5"
+    roomAnnotation = "2.2.5"
+    glide = "4.11.0"
+    lifeCycleExtension = "2.2.0"
+    coroutines = "1.4.0-M1"
+    navFragment = "2.3.1"
+    navKtx = "2.3.1"
+    activityKtx = "1.1.0"
+    hilt = "2.28-alpha"
+    hiltLifeCycleVM = "1.0.0-alpha02"
+    hiltCompiler = "1.0.0-alpha02"
+    hiltDagger = "2.28-alpha"
+    timber = "4.7.1"
+    dataStorePref = "1.0.0-alpha02"
+    otto = "1.3.8"
+    complexRv = "2.7.0"
+    mockitoVersion = '2.25.0'
+    viewPager2 = "1.0.0"
+    databinding = "3.1.4"
+    constraintlayout = "2.0.2"
+    ktx_core = "1.3.2"
+    multidex = "1.0.3"
+    appcompat = "1.2.0"
+    commonDependency = [
+            ktx_core     : "androidx.core:core-ktx:${ktx_core}",
+            multidex     : "com.android.support:multidex:${multidex}",
+            appcompat    : "androidx.appcompat:appcompat:${appcompat}",
+            dataBinding  : "com.android.databinding:compiler:${databinding}",
+            gson         : "com.google.code.gson:gson:${gson}",
+            coroutines   : "org.jetbrains.kotlinx:kotlinx-coroutines-core:${coroutines}",
+            activityKtx  : "androidx.activity:activity-ktx:${activityKtx}",
+            dataStorePref: "androidx.datastore:datastore-preferences:${dataStorePref}",
+            otto         : "com.squareup:otto:${otto}"
+    ]
+    retrofitDependency = [
+            retrofit2             : "com.squareup.retrofit2:retrofit:${retrofit2}",
+            loggingInterceptor    : "com.squareup.okhttp3:logging-interceptor:${loggingInterceptor}",
+            retrofitGsonConvertor : "com.squareup.retrofit2:converter-gson:${retrofitGsonConvertor}",
+            retrofit2AdatperRxJava: "com.squareup.retrofit2:adapter-rxjava2:${retrofit2AdatperRxJava}",
+            okhttp                : "com.squareup.okhttp3:okhttp:${okhttp}"
+    ]
+    navigationDependency = [
+            navFragment: "androidx.navigation:navigation-fragment-ktx:${navFragment}",
+            navKtx     : "androidx.navigation:navigation-ui-ktx:${navKtx}"
+    ]
+    di = [
+            hilt           : "com.google.dagger:hilt-android:${hilt}",
+            hiltLifeCycleVM: "androidx.hilt:hilt-lifecycle-viewmodel:${hiltLifeCycleVM}",
+            hiltCompiler   : "androidx.hilt:hilt-compiler:${hiltCompiler}",
+            hiltDagger     : "com.google.dagger:hilt-android-compiler:${hiltDagger}"
+    ]
+    image_processing = [
+            glide        : "com.github.bumptech.glide:glide:${glide}",
+            glideCompiler: "com.github.bumptech.glide:compiler:${glide}"
+    ]
+    logs = [
+            timber: "com.jakewharton.timber:timber:${timber}"
+    ]
+    reactive_extension = [
+            rxJava2: "io.reactivex.rxjava2:rxandroid:${rxJava2}"
+    ]
+    testing = [
+            junit                           : "junit:junit:${junit}",
+            junitExtension                  : "androidx.test.ext:junit:${junitExtension}",
+            espresso                        : "androidx.test.espresso:espresso-core:${espresso}",
+            mockito                         : "org.mockito:mockito-core:${mockitoVersion}",
+            mockitoTestImplementation       : "org.mockito:mockito-inline:${mockitoVersion}",
+            mockitoAndroidTestImplementation: "org.mockito:mockito-android:${mockitoVersion}"
+    ]
+    androidArchitectureComponents = [
+            lifeCycleExtension: "androidx.lifecycle:lifecycle-extensions:${lifeCycleExtension}",
+            lifeCycleLiveData : "androidx.lifecycle:lifecycle-livedata-ktx:${lifeCycleExtension}",
+            lifeCycleRuntime  : "androidx.lifecycle:lifecycle-runtime:${lifeCycleExtension}",
+            lifecyleViewModel : "androidx.lifecycle:lifecycle-viewmodel-ktx:${lifecyleViewModel}"
+    ]
+    database = [
+            room          : "androidx.room:room-runtime:${room}",
+            roomAnnotation: "androidx.room:room-compiler:${roomAnnotation}"
+    ]
+    ui_design = [
+            materialDesign  : "com.google.android.material:material:${materialDesign}",
+            complexRv       : "com.xwray:groupie:${complexRv}",
+            viewPager2      : "androidx.viewpager2:viewpager2:${viewPager2}",
+            constraintLayout: "androidx.constraintlayout:constraintlayout:${constraintlayout}"
+    ]
+
 }
