--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,7 @@ ext {
     multidex = "1.0.3"
     appcompat = "1.2.0"
     quickpermissionsVersion = '0.4.0'
+    localizationVersion = '1.2.5'
     commonDependency = [
             ktx_core     : "androidx.core:core-ktx:${ktx_core}",
             multidex     : "com.android.support:multidex:${multidex}",
@@ -129,6 +130,7 @@ ext {
             viewPager2      : "androidx.viewpager2:viewpager2:${viewPager2}",
             constraintLayout: "androidx.constraintlayout:constraintlayout:${constraintlayout}",
             lottieViews     : "com.airbnb.android:lottie:${lottieVersion}",
-            quickPermission :"com.github.quickpermissions:quickpermissions-kotlin:${quickpermissionsVersion}"
+            quickPermission :"com.github.quickpermissions:quickpermissions-kotlin:${quickpermissionsVersion}",
+           localization : "com.akexorcist:localization:$localizationVersion"
     ]
 }
