--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,6 +98,8 @@ dependencies {
     implementation config.commonDependency.multidex
     implementation config.commonDependency.appcompat
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     //Databinding Compiler
     kapt config.commonDependency.dataBinding
     //RetroFit Networking
