Issue has been resolved

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -169,9 +169,14 @@ dependencies {
     implementation config.ui_design.ssp
     //for screen size
     implementation config.ui_design.sdp
+
+    implementation config.ui_design.circleimageview
     //paging3
     implementation config.paging3.pagingRuntime
     implementation config.paging3.pagingRuntimeKtx
+
+
+
 
 
 }
